src/objects/dlrs__LookupRollupSummaryScheduleItems__c.object
<CustomObject>
    <fields>
        <fullName>dlrs__LookupRollupSummary2__c</fullName>
        <description>Either the Id (Custom Object) or Name (Custom Metadata) of the rollup summary definition that generated this schedule item.</description>
        <label>Lookup Rollup Summary 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dlrs__LookupRollupSummary__c</fullName>
        <label>Lookup Rollup Summary</label>
        <referenceTo>dlrs__LookupRollupSummary__c</referenceTo>
        <relationshipName>LookupRollupSummaryScheduleQueues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>dlrs__ParentId__c</fullName>
        <label>Parent Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dlrs__ParentRecord__c</fullName>
        <formula>HYPERLINK( dlrs__ParentId__c , &apos;Parent Record&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dlrs__QualifiedParentID__c</fullName>
        <externalId>true</externalId>
        <label>Qualified Parent ID</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Lookup Rollup Summary Schedule Item</label>
    <listViews>
        <fullName>dlrs__All</fullName>
        <columns>NAME</columns>
        <columns>dlrs__LookupRollupSummary__c</columns>
        <columns>dlrs__ParentRecord__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Lookup Rollup Summary Schedule Item Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lookup Rollup Summary Schedule Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>